# NLP_Assignment_3

./: bert_dist.py  calc.py  pyproject.toml  weather.py
