[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "httpx>=0.28.1",
    "mcp[cli]>=1.22.0",
    "sympy>=1.14.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
